# GPT-124M-CPP

./: .gitignore  CMakeLists.txt  GPT-Architecture.md  README.md  ScaledDOTAttention.md  Self-Attention.md  play.ipynb
include/: GPT2.hpp
layers/Attention/include/: multihead_self_attention.hpp  scaled_dot_attention.hpp
layers/Attention/src/: multihead_self_attention.cpp  scaled_dot_attention.cpp
layers/Embedding/: Embedding.md
layers/Embedding/include/: input_embedding.hpp
layers/Embedding/src/: input_embedding.cpp
layers/MLP/: MLP.md
layers/MLP/include/: mlp.hpp
layers/MLP/src/: mlp.cpp
layers/Normalization/: LayerNorm.md
layers/Normalization/include/: layer_normalization.hpp
layers/Normalization/src/: layer_normalization.cpp
operations/include/: activations.hpp
operations/src/: activations.cpp
src/: GPT2.cpp  main.cpp
utils/include/: Loader.hpp  tokenizer.hpp
utils/src/: Loader.cpp  tokenizer.cpp
utils/vocab/: gpt2_vocabulary.json
